# camoto-studio

./: .gitignore  Makefile.am  README  TODO  autogen.sh  configure.ac
data/games/: bash.xml  captain-comic.xml  captain-comic2.xml  catacomb-ii.xml  catacomb.xml  ccaves.xml  ccomic.xml  cosmo.xml  cosmos-cosmic-adventures.xml  crystal-caves.xml  dangerous-dave.xml  dark-ages.xml  ddave.xml  doofus.xml  duke-nukem-ii.xml  duke-nukem.xml  god-of-thunder.xml  halloween-harry.xml  harry.xml  highway-hunter.xml  hocus-pocus.xml  hocus.xml  hugo1.xml  jill-of-the-jungle.xml  kiloblaster.xml  major-stryker.xml  monster-bash.xml  mystic-towers.xml  raptor.xml  rockford.xml  scubaventure.xml  secret-agent.xml  solar-winds.xml  trugg.xml  vinyl-goddess-from-mars.xml  wacky-wheels.xml  wacky.xml  word-rescue.xml  wordresc.xml  xargon.xml  (+1 more)
doc/: Makefile.am  camoto-studio.1  camoto-studio.xml  camoto.xsl
gui/: tab-graphics.glade  tab-map2d.glade  tab-newproject.glade  tab-openfile.glade  tab-project.glade  win-main.glade
m4/: rtmidi.m4
src/: Makefile.am  MusicWriter_OPLSynth.cpp  MusicWriter_OPLSynth.hpp  audio.cpp  audio.hpp  camotolibs.cpp  camotolibs.hpp  ct-map2d-canvas.cpp  ct-map2d-canvas.hpp  dbopl.cpp  dbopl.hpp  dlg-export-mus.cpp  dlg-export-mus.hpp  dlg-import-mus.cpp  dlg-import-mus.hpp  dlg-map-attr.cpp  dlg-map-attr.hpp  dosbox.hpp  editor-image.cpp  editor-image.hpp  editor-map-basecanvas.cpp  editor-map-basecanvas.hpp  editor-map-canvas.cpp  editor-map-canvas.hpp  editor-map-document.cpp  editor-map-document.hpp  editor-map-tilepanel-canvas.cpp  editor-map-tilepanel-canvas.hpp  editor-map-tilepanel.cpp  editor-map-tilepanel.hpp  editor-map.cpp  editor-map.hpp  editor-music-document.cpp  editor-music-document.hpp  editor-music-eventpanel.cpp  editor-music-eventpanel.hpp  editor-music-instrumentlistpanel.cpp  editor-music-instrumentlistpanel.hpp  editor-music-instrumentpanel.cpp  editor-music-instrumentpanel.hpp  (+40 more)
