AUTOMAKE_OPTIONS = foreign dist-bzip2

SUBDIRS = src doc

EXTRA_DIST = README

# Location of boost.m4
ACLOCAL_AMFLAGS = -I m4

srcdir = @srcdir@
VPATH = @srcdir@

pkgdata_DATA  = data/games/captain-comic.xml      data/games/screenshots/captain-comic.png      data/games/icons/captain-comic.png
pkgdata_DATA += data/games/cosmos-cosmic-adventures.xml data/games/screenshots/cosmos-cosmic-adventures.png data/games/icons/cosmos-cosmic-adventures.png
pkgdata_DATA += data/games/crystal-caves.xml      data/games/screenshots/crystal-caves.png      data/games/icons/crystal-caves.png
pkgdata_DATA += data/games/dangerous-dave.xml     data/games/screenshots/dangerous-dave.png     data/games/icons/dangerous-dave.png
pkgdata_DATA += data/games/halloween-harry.xml    data/games/screenshots/halloween-harry.png    data/games/icons/halloween-harry.png
pkgdata_DATA += data/games/hocus-pocus.xml        data/games/screenshots/hocus-pocus.png        data/games/icons/hocus-pocus.png
pkgdata_DATA += data/games/monster-bash.xml       data/games/screenshots/monster-bash.png       data/games/icons/monster-bash.png
pkgdata_DATA += data/games/secret-agent.xml       data/games/screenshots/secret-agent.png       data/games/icons/secret-agent.png
pkgdata_DATA += data/games/wacky-wheels.xml       data/games/screenshots/wacky-wheels.png       data/games/icons/wacky-wheels.png
pkgdata_DATA += data/games/word-rescue.xml        data/games/screenshots/word-rescue.png        data/games/icons/word-rescue.png
pkgdata_DATA += data/games/xargon.xml             data/games/screenshots/xargon.png             data/games/icons/xargon.png

pkgdata_DATA += data/icons/dec-width.png
pkgdata_DATA += data/icons/dec-offset.png
pkgdata_DATA += data/icons/export.png
pkgdata_DATA += data/icons/grid.png
pkgdata_DATA += data/icons/gtk-media-next-ltr.png
pkgdata_DATA += data/icons/gtk-media-pause.png
pkgdata_DATA += data/icons/gtk-media-play-ltr.png
pkgdata_DATA += data/icons/gtk-media-previous-ltr.png
pkgdata_DATA += data/icons/gtk-zoom-100.png
pkgdata_DATA += data/icons/gtk-zoom-in.png
pkgdata_DATA += data/icons/gtk-zoom-out.png
pkgdata_DATA += data/icons/import.png
pkgdata_DATA += data/icons/inc-width.png
pkgdata_DATA += data/icons/inc-offset.png
pkgdata_DATA += data/icons/inst-midi.png
pkgdata_DATA += data/icons/inst-mute.png
pkgdata_DATA += data/icons/inst-opl.png
pkgdata_DATA += data/icons/inst-pcm.png
pkgdata_DATA += data/icons/mode-obj.png
pkgdata_DATA += data/icons/mode-tile.png
pkgdata_DATA += data/icons/zoom_1-1.png
pkgdata_DATA += data/icons/zoom_2-1.png
pkgdata_DATA += data/icons/zoom_3-1.png
