AUTOMAKE_OPTIONS = foreign dist-bzip2

SUBDIRS = src doc

EXTRA_DIST = README

# Location of boost.m4
ACLOCAL_AMFLAGS = -I m4

srcdir = @srcdir@
VPATH = @srcdir@

gamedir = $(pkgdatadir)/games
game_DATA  = data/games/captain-comic.xml
game_DATA += data/games/cosmos-cosmic-adventures.xml
game_DATA += data/games/crystal-caves.xml
game_DATA += data/games/dangerous-dave.xml
game_DATA += data/games/halloween-harry.xml
game_DATA += data/games/hocus-pocus.xml
game_DATA += data/games/jill-of-the-jungle.xml
game_DATA += data/games/major-stryker.xml
game_DATA += data/games/monster-bash.xml
game_DATA += data/games/secret-agent.xml
game_DATA += data/games/wacky-wheels.xml
game_DATA += data/games/word-rescue.xml
game_DATA += data/games/xargon.xml

sshotdir = $(gamedir)/screenshots
sshot_DATA  = data/games/screenshots/captain-comic.png
sshot_DATA += data/games/screenshots/cosmos-cosmic-adventures.png
sshot_DATA += data/games/screenshots/crystal-caves.png
sshot_DATA += data/games/screenshots/dangerous-dave.png
sshot_DATA += data/games/screenshots/halloween-harry.png
sshot_DATA += data/games/screenshots/hocus-pocus.png
sshot_DATA += data/games/screenshots/jill-of-the-jungle.png
sshot_DATA += data/games/screenshots/major-stryker.png
sshot_DATA += data/games/screenshots/monster-bash.png
sshot_DATA += data/games/screenshots/secret-agent.png
sshot_DATA += data/games/screenshots/wacky-wheels.png
sshot_DATA += data/games/screenshots/word-rescue.png
sshot_DATA += data/games/screenshots/xargon.png

gicondir = $(gamedir)/icons
gicon_DATA  = data/games/icons/captain-comic.png
gicon_DATA += data/games/icons/cosmos-cosmic-adventures.png
gicon_DATA += data/games/icons/crystal-caves.png
gicon_DATA += data/games/icons/dangerous-dave.png
gicon_DATA += data/games/icons/halloween-harry.png
gicon_DATA += data/games/icons/hocus-pocus.png
gicon_DATA += data/games/icons/jill-of-the-jungle.png
gicon_DATA += data/games/icons/major-stryker.png
gicon_DATA += data/games/icons/monster-bash.png
gicon_DATA += data/games/icons/secret-agent.png
gicon_DATA += data/games/icons/wacky-wheels.png
gicon_DATA += data/games/icons/word-rescue.png
gicon_DATA += data/games/icons/xargon.png

icondir = $(pkgdatadir)/icons
icon_DATA  = data/icons/dec-width.png
icon_DATA += data/icons/dec-offset.png
icon_DATA += data/icons/export.png
icon_DATA += data/icons/grid.png
icon_DATA += data/icons/gtk-media-next-ltr.png
icon_DATA += data/icons/gtk-media-pause.png
icon_DATA += data/icons/gtk-media-play-ltr.png
icon_DATA += data/icons/gtk-media-previous-ltr.png
icon_DATA += data/icons/gtk-zoom-100.png
icon_DATA += data/icons/gtk-zoom-in.png
icon_DATA += data/icons/gtk-zoom-out.png
icon_DATA += data/icons/import.png
icon_DATA += data/icons/inc-width.png
icon_DATA += data/icons/inc-offset.png
icon_DATA += data/icons/inst-midi.png
icon_DATA += data/icons/inst-mute.png
icon_DATA += data/icons/inst-opl.png
icon_DATA += data/icons/inst-pcm.png
icon_DATA += data/icons/mode-obj.png
icon_DATA += data/icons/mode-tile.png
icon_DATA += data/icons/zoom_1-1.png
icon_DATA += data/icons/zoom_2-1.png
icon_DATA += data/icons/zoom_3-1.png
