SUBDIRS = src doc

EXTRA_DIST = README

# Location of boost.m4
ACLOCAL_AMFLAGS = -I m4

srcdir = @srcdir@
VPATH = @srcdir@

gamedir = $(pkgdatadir)/games
dist_game_DATA  = data/games/captain-comic.xml
dist_game_DATA += data/games/catacomb-ii.xml
dist_game_DATA += data/games/catacomb.xml
dist_game_DATA += data/games/cosmos-cosmic-adventures.xml
dist_game_DATA += data/games/crystal-caves.xml
dist_game_DATA += data/games/dangerous-dave.xml
dist_game_DATA += data/games/dark-ages.xml
dist_game_DATA += data/games/doofus.xml
dist_game_DATA += data/games/duke-nukem-ii.xml
dist_game_DATA += data/games/god-of-thunder.xml
dist_game_DATA += data/games/halloween-harry.xml
dist_game_DATA += data/games/hocus-pocus.xml
dist_game_DATA += data/games/hugo1.xml
dist_game_DATA += data/games/jill-of-the-jungle.xml
dist_game_DATA += data/games/kiloblaster.xml
dist_game_DATA += data/games/major-stryker.xml
dist_game_DATA += data/games/monster-bash.xml
dist_game_DATA += data/games/raptor.xml
dist_game_DATA += data/games/rockford.xml
dist_game_DATA += data/games/scubaventure.xml
dist_game_DATA += data/games/secret-agent.xml
dist_game_DATA += data/games/vinyl-goddess-from-mars.xml
dist_game_DATA += data/games/wacky-wheels.xml
dist_game_DATA += data/games/word-rescue.xml
dist_game_DATA += data/games/xargon.xml
dist_game_DATA += data/games/zone66.xml

sshotdir = $(gamedir)/screenshots
dist_sshot_DATA  = data/games/screenshots/captain-comic.png
dist_sshot_DATA += data/games/screenshots/catacomb-ii.png
dist_sshot_DATA += data/games/screenshots/catacomb.png
dist_sshot_DATA += data/games/screenshots/cosmos-cosmic-adventures.png
dist_sshot_DATA += data/games/screenshots/crystal-caves.png
dist_sshot_DATA += data/games/screenshots/dangerous-dave.png
dist_sshot_DATA += data/games/screenshots/dark-ages.png
dist_sshot_DATA += data/games/screenshots/doofus.png
dist_sshot_DATA += data/games/screenshots/duke-nukem-ii.png
dist_sshot_DATA += data/games/screenshots/god-of-thunder.png
dist_sshot_DATA += data/games/screenshots/halloween-harry.png
dist_sshot_DATA += data/games/screenshots/hocus-pocus.png
dist_sshot_DATA += data/games/screenshots/hugo1.png
dist_sshot_DATA += data/games/screenshots/jill-of-the-jungle.png
dist_sshot_DATA += data/games/screenshots/kiloblaster.png
dist_sshot_DATA += data/games/screenshots/major-stryker.png
dist_sshot_DATA += data/games/screenshots/monster-bash.png
dist_sshot_DATA += data/games/screenshots/raptor.png
dist_sshot_DATA += data/games/screenshots/rockford.png
dist_sshot_DATA += data/games/screenshots/scubaventure.png
dist_sshot_DATA += data/games/screenshots/secret-agent.png
dist_sshot_DATA += data/games/screenshots/vinyl-goddess-from-mars.png
dist_sshot_DATA += data/games/screenshots/wacky-wheels.png
dist_sshot_DATA += data/games/screenshots/word-rescue.png
dist_sshot_DATA += data/games/screenshots/xargon.png
dist_sshot_DATA += data/games/screenshots/zone66.png

gicondir = $(gamedir)/icons
dist_gicon_DATA  = data/games/icons/captain-comic.png
dist_gicon_DATA += data/games/icons/catacomb-ii.png
dist_gicon_DATA += data/games/icons/catacomb.png
dist_gicon_DATA += data/games/icons/cosmos-cosmic-adventures.png
dist_gicon_DATA += data/games/icons/crystal-caves.png
dist_gicon_DATA += data/games/icons/dangerous-dave.png
dist_gicon_DATA += data/games/icons/dark-ages.png
dist_gicon_DATA += data/games/icons/doofus.png
dist_gicon_DATA += data/games/icons/duke-nukem-ii.png
dist_gicon_DATA += data/games/icons/god-of-thunder.png
dist_gicon_DATA += data/games/icons/halloween-harry.png
dist_gicon_DATA += data/games/icons/hocus-pocus.png
dist_gicon_DATA += data/games/icons/hugo1.png
dist_gicon_DATA += data/games/icons/jill-of-the-jungle.png
dist_gicon_DATA += data/games/icons/kiloblaster.png
dist_gicon_DATA += data/games/icons/major-stryker.png
dist_gicon_DATA += data/games/icons/monster-bash.png
dist_gicon_DATA += data/games/icons/raptor.png
dist_gicon_DATA += data/games/icons/rockford.png
dist_gicon_DATA += data/games/icons/scubaventure.png
dist_gicon_DATA += data/games/icons/secret-agent.png
dist_gicon_DATA += data/games/icons/vinyl-goddess-from-mars.png
dist_gicon_DATA += data/games/icons/wacky-wheels.png
dist_gicon_DATA += data/games/icons/word-rescue.png
dist_gicon_DATA += data/games/icons/xargon.png
dist_gicon_DATA += data/games/icons/zone66.png

icondir = $(pkgdatadir)/icons
dist_icon_DATA  = data/icons/dec-width.png
dist_icon_DATA += data/icons/dec-offset.png
dist_icon_DATA += data/icons/export.png
dist_icon_DATA += data/icons/grid.png
dist_icon_DATA += data/icons/gtk-media-next-ltr.png
dist_icon_DATA += data/icons/gtk-media-pause.png
dist_icon_DATA += data/icons/gtk-media-play-ltr.png
dist_icon_DATA += data/icons/gtk-media-previous-ltr.png
dist_icon_DATA += data/icons/gtk-zoom-100.png
dist_icon_DATA += data/icons/gtk-zoom-in.png
dist_icon_DATA += data/icons/gtk-zoom-out.png
dist_icon_DATA += data/icons/import.png
dist_icon_DATA += data/icons/inc-width.png
dist_icon_DATA += data/icons/inc-offset.png
dist_icon_DATA += data/icons/inst-midi.png
dist_icon_DATA += data/icons/inst-mute.png
dist_icon_DATA += data/icons/inst-opl.png
dist_icon_DATA += data/icons/inst-pcm.png
dist_icon_DATA += data/icons/mode-obj.png
dist_icon_DATA += data/icons/mode-tile.png
dist_icon_DATA += data/icons/properties.png
dist_icon_DATA += data/icons/zoom_1-1.png
dist_icon_DATA += data/icons/zoom_2-1.png
dist_icon_DATA += data/icons/zoom_3-1.png

mapdir = $(pkgdatadir)/maps
dist_map_DATA  = data/maps/interactive.png
dist_map_DATA += data/maps/number-0.png
dist_map_DATA += data/maps/number-1.png
dist_map_DATA += data/maps/number-2.png
dist_map_DATA += data/maps/number-3.png
dist_map_DATA += data/maps/number-4.png
dist_map_DATA += data/maps/number-5.png
dist_map_DATA += data/maps/number-6.png
dist_map_DATA += data/maps/number-7.png
dist_map_DATA += data/maps/number-8.png
dist_map_DATA += data/maps/number-9.png
dist_map_DATA += data/maps/number-a.png
dist_map_DATA += data/maps/number-b.png
dist_map_DATA += data/maps/number-c.png
dist_map_DATA += data/maps/number-d.png
dist_map_DATA += data/maps/number-e.png
dist_map_DATA += data/maps/number-f.png
dist_map_DATA += data/maps/unknown-tile.png
