bin_PROGRAMS = camoto-studio

camoto_studio_SOURCES = main.cpp
camoto_studio_SOURCES += audio.cpp
camoto_studio_SOURCES += dbopl.cpp
camoto_studio_SOURCES += exceptions.cpp
camoto_studio_SOURCES += MusicWriter_OPLSynth.cpp
camoto_studio_SOURCES += project.cpp
camoto_studio_SOURCES += gamelist.cpp
camoto_studio_SOURCES += mainwindow.cpp
camoto_studio_SOURCES += newproj.cpp
camoto_studio_SOURCES += prefsdlg.cpp
camoto_studio_SOURCES += editor.cpp
camoto_studio_SOURCES += editor-image.cpp
camoto_studio_SOURCES += editor-map.cpp
camoto_studio_SOURCES += editor-map-canvas.cpp
camoto_studio_SOURCES += editor-map-document.cpp
camoto_studio_SOURCES += editor-map-tilepanel.cpp
camoto_studio_SOURCES += editor-map-tilepanel-canvas.cpp
camoto_studio_SOURCES += editor-music.cpp
camoto_studio_SOURCES += editor-music-document.cpp
camoto_studio_SOURCES += editor-music-eventpanel.cpp
camoto_studio_SOURCES += editor-tileset.cpp
camoto_studio_SOURCES += editor-tileset-canvas.cpp
camoto_studio_SOURCES += efailure.cpp

EXTRA_camoto_studio_SOURCES = main.hpp
EXTRA_camoto_studio_SOURCES += audio.hpp
EXTRA_camoto_studio_SOURCES += dbopl.hpp
EXTRA_camoto_studio_SOURCES += dosbox.hpp
EXTRA_camoto_studio_SOURCES += exceptions.hpp
EXTRA_camoto_studio_SOURCES += MusicWriter_OPLSynth.hpp
EXTRA_camoto_studio_SOURCES += project.hpp
EXTRA_camoto_studio_SOURCES += gamelist.hpp
EXTRA_camoto_studio_SOURCES += mainwindow.hpp
EXTRA_camoto_studio_SOURCES += newproj.hpp
EXTRA_camoto_studio_SOURCES += prefsdlg.hpp
EXTRA_camoto_studio_SOURCES += editor.hpp
EXTRA_camoto_studio_SOURCES += editor-image.hpp
EXTRA_camoto_studio_SOURCES += editor-map.hpp
EXTRA_camoto_studio_SOURCES += editor-map-canvas.hpp
EXTRA_camoto_studio_SOURCES += editor-map-document.hpp
EXTRA_camoto_studio_SOURCES += editor-map-tilepanel.hpp
EXTRA_camoto_studio_SOURCES += editor-map-tilepanel-canvas.hpp
EXTRA_camoto_studio_SOURCES += editor-music.hpp
EXTRA_camoto_studio_SOURCES += editor-music-document.hpp
EXTRA_camoto_studio_SOURCES += editor-music-eventpanel.hpp
EXTRA_camoto_studio_SOURCES += editor-tileset.hpp
EXTRA_camoto_studio_SOURCES += editor-tileset-canvas.hpp
EXTRA_camoto_studio_SOURCES += efailure.hpp

WARNINGS = -Wall -Wextra -Wno-unused-parameter

AM_CPPFLAGS  = $(BOOST_CPPFLAGS)
AM_CPPFLAGS += -I $(top_srcdir)/include
AM_CPPFLAGS += $(libgamecommon_CPPFLAGS)
AM_CPPFLAGS += $(libgamearchive_CPPFLAGS)
AM_CPPFLAGS += $(libgamegraphics_CPPFLAGS)
AM_CPPFLAGS += $(libgamemaps_CPPFLAGS)
AM_CPPFLAGS += $(libgamemusic_CPPFLAGS)
AM_CPPFLAGS += $(WARNINGS)

AM_CXXFLAGS  = $(DEBUG_CXXFLAGS)
AM_CXXFLAGS += $(libxml2_CFLAGS)
AM_CXXFLAGS += $(GL_CFLAGS)
AM_CXXFLAGS += $(sdl_CFLAGS)
AM_CXXFLAGS += $(libgamecommon_CFLAGS)
AM_CXXFLAGS += $(libgamearchive_CFLAGS)
AM_CXXFLAGS += $(libgamegraphics_CFLAGS)
AM_CXXFLAGS += $(libgamemaps_CFLAGS)
AM_CXXFLAGS += $(libgamemusic_CFLAGS)
AM_CXXFLAGS += $(sdl_CFLAGS)
AM_CXXFLAGS += -DDATA_PATH=\"$(pkgdatadir)\"

AM_LDFLAGS  = $(BOOST_SYSTEM_LIBS)
AM_LDFLAGS += $(BOOST_FILESYSTEM_LIBS)
AM_LDFLAGS += $(BOOST_PROGRAM_OPTIONS_LIBS)
AM_LDFLAGS += $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)
AM_LDFLAGS += $(BOOST_THREAD_LIBS)
AM_LDFLAGS += $(libxml2_LIBS)
AM_LDFLAGS += $(GL_LIBS)
AM_LDFLAGS += $(sdl_LIBS)
AM_LDFLAGS += $(libpng_LIBS)
AM_LDFLAGS += $(libgamecommon_LIBS)
AM_LDFLAGS += $(libgamearchive_LIBS)
AM_LDFLAGS += $(libgamegraphics_LIBS)
AM_LDFLAGS += $(libgamemaps_LIBS)
AM_LDFLAGS += $(libgamemusic_LIBS)
